# haloskell

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md  haloskell.cabal
app/: Main.hs
src/Data/String/: Strip.hs
test/Data/String/: StripSpec.hs
