name:                haloskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/skrytebane/haloskell#readme
license:             BSD3
license-file:        LICENSE
author:              Johannes Grødem
maintainer:          johs@grdm.no
copyright:           2017, Johannes Grødem
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haloskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
