name:                haloskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/skrytebane/haloskell#readme
license:             MIT
license-file:        LICENSE
author:              Johannes Grødem
maintainer:          johs@grdm.no
copyright:           2017, Johannes Grødem
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haloskell
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haloskell

test-suite haloskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haloskell
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/skrytebane/haloskell
